--- a/contents.html
+++ b/contents.html
@@ -17,7 +17,7 @@
     <div class="containers">
         <header>
             <div class="titles">
-                <h3>CURSO: ESTADÍSTICAS VITALES</h3>
+                <h3>DIPLOMADO: ESTADÍSTICAS VITALES</h3>
                 <hr>
                 <h5>Módulo 3 - Unidad 1</h5>
                 <h1>Módulo Certificación Médica de Defunciones</h1>
@@ -593,6 +593,9 @@
                             class="modal-trigger modal-close btn-custom-modal btn-modal-2-2-1">
                             <span class="pulse animated infinite">Para tener en cuenta</span>
                         </button>
+                        <span class="text-note">
+                            Haga clic sobre las cajas para conocerlos.
+                        </span>
                     </div>
                 </div>
 
@@ -774,15 +777,13 @@
                                     <div class="slide3-1-1">
                                         <img src="img/ico1-slide3-1.png" alt="">
                                         <p>
-                                            El usuario y contraseña asignado a cada profesional de salud para acceder a
-                                            la plataforma RUAFND es único e intransferible y por tanto será responsable
-                                            de la información ingresada de cada hecho vital.
+                                            <strong>1.</strong> El usuario y contraseña asignado a cada profesional de salud para acceder a la plataforma RUAFND es único e intransferible y por tanto será responsable de la información ingresada de cada hecho vital.
                                         </p>
                                     </div>
                                     <div class="slide3-1-2">
                                         <img src="img/ico2-slide3-1.png" alt="">
                                         <p>
-                                            Si usted certifica una defunción en una IPS todas las variables según
+                                            <strong>2.</strong> Si usted certifica una defunción en una IPS todas las variables según
                                             corresponda son de obligatorio diligenciamiento. Lo que no encuentre
                                             relacionado en la historia clínica debe ser preguntado a familiares del
                                             fallecido.
@@ -793,7 +794,7 @@
                                     <div class="slide3-1-3">
                                         <img src="img/ico3-slide3-1.png" alt="">
                                         <p>
-                                            Es una buena práctica diligenciar las dos partes del certificado una vez
+                                            <strong>3.</strong> Es una buena práctica diligenciar las dos partes del certificado una vez
                                             ocurre la defunción para evitar pérdidas de información. <br>
                                             En los casos eventuales en que esto no sea posible y diligencie las partes
                                             del certificado por separado, verifique que tanto el número del certificado
@@ -804,7 +805,7 @@
                                     <div class="slide3-1-4">
                                         <img src="img/ico4-slide3-1.png" alt="">
                                         <p>
-                                            Si el producto de la concepción nace vivo y a los pocos segundos o minutos
+                                            <strong>4.</strong> Si el producto de la concepción nace vivo y a los pocos segundos o minutos
                                             fallece se debe diligenciar el certificado de nacido vivo y posteriormente
                                             el certificado de defunción.
                                         </p>
@@ -814,7 +815,7 @@
                                     <div class="slide3-1-5">
                                         <img src="img/ico4-slide3-1.png" alt="">
                                         <p>
-                                            Tenga en cuenta que es diferente el lugar de ocurrencia (donde ocurre la
+                                            <strong>5.</strong> Tenga en cuenta que es diferente el lugar de ocurrencia (donde ocurre la
                                             defunción), el lugar de residencia (donde vive el fallecido o madre del
                                             fallecido) y el lugar de expedición (donde se certifica la defunción).
                                         </p>
@@ -822,8 +823,9 @@
                                     <div class="slide3-1-6">
                                         <img src="img/ico4-slide3-1.png" alt="">
                                         <p>
-                                            Es una buena práctica diligenciar las dos partes del certificado una vez
-                                            ocurre la defunción para evitar pérdidas de información.
+                                            <strong>6.</strong> Para que una persona sea considerado residente habitual (para el caso de
+                                            fallecido o la madre según corresponda), en el país se considera una
+                                            estancia mínima de seis meses habitando en el lugar.
                                         </p>
                                     </div>
                                 </li>
@@ -831,15 +833,7 @@
                                     <div class="slide3-1-7">
                                         <img src="img/ico4-slide3-1.png" alt="">
                                         <p>
-                                            Para que una persona sea considerado residente habitual (para el caso de
-                                            fallecido o la madre según corresponda), en el país se considera una
-                                            estancia mínima de seis meses habitando en el lugar.
-                                        </p>
-                                    </div>
-                                    <div class="slide3-1-8">
-                                        <img src="img/ico4-slide3-1.png" alt="">
-                                        <p>
-                                            En lo concerniente al lugar de residencia habitual del fallecido o la madre
+                                            <strong>7.</strong> En lo concerniente al lugar de residencia habitual del fallecido o la madre
                                             según corresponda, en el país se considera una estancia mínima de seis meses
                                             habitando en el lugar. Tenga en cuenta que es diferente el lugar de
                                             ocurrencia (donde ocurre la defunción), el lugar de residencia (donde vive
@@ -917,14 +911,11 @@
                                             <div class="">
                                                 • Para certificar una muerte fetal se debe tener en cuenta las
                                                 recomendaciones establecidas en la Circular 037 de 2015.
-                                                <br>
+                                                <br><br>
                                                 • Cuando se trate de una muerte fetal, no se activarán las variables
                                                 (preguntas 10 a 18) del capítulo 1 información general, ni el capítulo 3
                                                 defunciones de mujeres en edad fértil y en los casos en que corresponda
                                                 una muerte natural, no se activará el capítulo 4 muertes violentas.
-                                                <br>
-                                                • Todas las muertes fetales son objeto de certificación, así no sean
-                                                objeto de registro civil.
                                             </div>
                                         </li>
                                         <li>
@@ -933,7 +924,7 @@
                                                 objeto de registro civil. Para los casos relacionados con abortos, la
                                                 aplicación desactiva algunas variables que no son de obligatorio
                                                 diligenciamiento.
-                                                <br>
+                                                <br><br>
                                                 • Si se presenta la muerte de una mujer en estado de embarazo se debe
                                                 generar la certificación de la defunción tanto de la madre como del
                                                 producto en el caso que éste también muera.
@@ -944,7 +935,7 @@
                                                 • Cuando se desconozca el peso del producto y las semanas de gestación
                                                 puede calcularse teniendo en cuenta la última fecha de la menstruación y
                                                 las medidas antropométricas del fallecido.
-                                                <br>
+                                                <br><br>
                                                 • En cuanto a la multiplicidad, tenga presente que se trata del número
                                                 de productos obtenidos de ese parto y no el número de hijos que la mujer
                                                 tuvo a lo largo de su vida reproductiva.
@@ -956,7 +947,7 @@
                                             <div class="">
                                                 • El peso que se solicita para la muerte de menor de un año corresponde
                                                 al peso al nacer, no al peso actual.
-                                                <br>
+                                                <br><br>
                                                 • En cuanto a las causas de defunción para las muertes fetales, en lo
                                                 posible deben registrar las afecciones del feto o recién nacido muerto,
                                                 basado en la evidencia clínica y circunstancias de la terminación del
@@ -988,7 +979,7 @@
                                                 • En la variable sexo, la opción indeterminado, debe ser utilizada
                                                 únicamente para los casos en que, por el estado del cadáver, no es
                                                 posible determinarlo.
-                                                <br>
+                                                <br><br>
                                                 • La variable ocupación, sólo aplica para mayores de 5 años y debe ser
                                                 diligenciada para establecer si la muerte tiene relación o no con un
                                                 accidente laboral o enfermedad profesional.
@@ -999,7 +990,7 @@
                                                 • La variable de pertenencia étnica es una variable de
                                                 auto-reconocimiento, que se debe indagar con los familiares del
                                                 fallecido.
-                                                <br>
+                                                <br><br>
                                                 • En cuanto a la pregunta si recibió asistencia médica, tener en cuenta
                                                 que se refiere al acompañamiento y asistencia que se brindó al paciente
                                                 durante su proceso de enfermedad o al momento de fallecer.
@@ -1026,7 +1017,7 @@
                                         <li>
                                             <div class="">
                                                 • Este capítulo está habilitado para muertes de mujeres de 10 a 54 años.
-                                                <br>
+                                                <br><br>
                                                 • Las preguntas en este capítulo son excluyentes, es decir si en la
                                                 pregunta estaba embarazada cuando falleció, se selecciona SI, en las
                                                 otras dos preguntas de este capítulo se debe responder NO.
@@ -1039,7 +1030,7 @@
                                                 produce muerte materna pero no del producto de la gestación, se deberá
                                                 certificar la muerte de la madre y diligenciar el respectivo certificado
                                                 de nacido vivo.
-                                                <br>
+                                                <br><br>
                                                 • La variable de “sin información” de este capítulo sólo debe ser
                                                 diligenciada por el Instituto Nacional de Medicina Legal y Ciencias
                                                 Forenses.
