--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="containers">
         <header>
             <div class="titles">
-                <h3>CURSO: ESTADÍSTICAS VITALES</h3>
+                <h3>DIPLOMADO: ESTADÍSTICAS VITALES</h3>
                 <hr>
                 <h5>Módulo 3 - Unidad 1</h5>
                 <h1>Módulo Certificación Médica de Defunciones</h1>
