--- a/contents-2-1-1.html
+++ b/contents-2-1-1.html
@@ -18,7 +18,7 @@
     <div class="containers">
         <header id="content">
             <div class="titles">
-                <h3>CURSO: ESTADÍSTICAS VITALES</h3>
+                <h3>DIPLOMADO: ESTADÍSTICAS VITALES</h3>
                 <hr>
                 <h5>Módulo 3 - Unidad 1</h5>
                 <h1>Módulo Certificación Médica de Defunciones</h1>
